# MAD-C

./: CMakeLists.txt  README.md  barrier.h  baselineWrapper.cc  baselineWrapper.h  config.h  generateConfigFile  madcWrapper.cc  madcWrapper.h  madcWrapperEdge.cc  madcWrapperEdge.cc~  madcWrapperEdge.h  main.cc  main_baseline.cc  main_better.cc  main_edge_device.cc  main_edge_device_arbitrary_topology.cc  networkConfig.hpp  rdtsc.h  tcpConnection.cc  tcpConnection.cc~  tcpConnection.hpp  tcpConnection_baseline.cc  tcpConnection_baseline.hpp  utils.h
build_madc_star/: generatePermutations.py  script.sh
confFiles/: n_od_1_binary_tree.h  n_od_1_binary_tree.h~  n_od_1_star.h  n_od_1_star.h~  n_od_2_binary_tree.h  n_od_2_binary_tree.h~  n_od_2_star.h  n_od_2_star.h~  n_od_3_star.h  n_od_3_star.h~  n_od_4_binary_tree.h  n_od_4_binary_tree.h~  n_od_4_star.h  n_od_4_star.h~  n_od_5_binary_tree.h  n_od_5_binary_tree.h~  n_od_5_star.h  n_od_5_star.h~
dbscan_lib/: dbscan_clusterer.cc  dbscan_clusterer.hpp  dbscan_clusterer.hpp~
experimentalBuild/: #script.sh#  CMakeCache.txt  Makefile  cluster_extraction  cmake_install.cmake  kirResults  result.idx  script.sh
experimentalBuild/data/: Factory0.index  (+9 more)
madc_lib/: idxXYZ.h  kir.txt~  map.cc  map.cc~  map.h  map.h~  map_combine_functions.cc  old_code.cc  stone.cc  stone.cc~  stone.h  stone.h~  unoptimized_stone.cc  unoptimized_stone.h
test_build/: createPermutations.py  createPermutations.py~  generatePermutations.py  permutations.txt  script.sh  script.sh~  testing.sh  testing.sh~
trash/: cluster_extraction.cpp
(+5 files in other folders)
